tests/should-fail/crashes/shouldnt-crash-28.j
function a takes nothin‡ returns integer
	if true then
		return 0
	elseif false then
	local a a = a
endfunction
